; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/sti/extr_sti_vtg.c_vtg_irq_thread.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/sti/extr_sti_vtg.c_vtg_irq_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sti_vtg = type { i32, i32, i32 }

@VTG_IRQ_TOP = common dso_local global i32 0, align 4
@VTG_TOP_FIELD_EVENT = common dso_local global i32 0, align 4
@VTG_BOTTOM_FIELD_EVENT = common dso_local global i32 0, align 4
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @vtg_irq_thread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vtg_irq_thread(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.sti_vtg*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = bitcast i8* %7 to %struct.sti_vtg*
  store %struct.sti_vtg* %8, %struct.sti_vtg** %5, align 8
  %9 = load %struct.sti_vtg*, %struct.sti_vtg** %5, align 8
  %10 = getelementptr inbounds %struct.sti_vtg, %struct.sti_vtg* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @VTG_IRQ_TOP, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = load i32, i32* @VTG_TOP_FIELD_EVENT, align 4
  br label %19

17:                                               ; preds = %2
  %18 = load i32, i32* @VTG_BOTTOM_FIELD_EVENT, align 4
  br label %19

19:                                               ; preds = %17, %15
  %20 = phi i32 [ %16, %15 ], [ %18, %17 ]
  store i32 %20, i32* %6, align 4
  %21 = load %struct.sti_vtg*, %struct.sti_vtg** %5, align 8
  %22 = getelementptr inbounds %struct.sti_vtg, %struct.sti_vtg* %21, i32 0, i32 2
  %23 = load i32, i32* %6, align 4
  %24 = load %struct.sti_vtg*, %struct.sti_vtg** %5, align 8
  %25 = getelementptr inbounds %struct.sti_vtg, %struct.sti_vtg* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @raw_notifier_call_chain(i32* %22, i32 %23, i32 %26)
  %28 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %28
}

declare dso_local i32 @raw_notifier_call_chain(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
